# testypf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GUI_TOOLKIT_EVALUATION.md  MVP_IMPLEMENTATION_PLAN.md  PLAN.md  PROJECT_STRUCTURE_VALIDATION.md  README.md  TODO.md  USAGE.md  WORK.md  build.sh  llms.txt  run.sh
crates/testypf-core/: Cargo.toml
crates/testypf-core/src/: lib.rs  lib.rs.backup  tests.rs
crates/testypf-gui/: Cargo.toml
crates/testypf-gui/src/: app.rs  helpers.rs  main.rs  message.rs  styles.rs  tests.rs  types.rs  update.rs
crates/testypf-gui/src/ui/: mod.rs
crates/testypf-gui/src/view/: main_view.rs  mod.rs  render_view.rs
examples/: README.md  render_once.rs
linked/: typg
