[package]
name = "testypf-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core library for testypf GUI application"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
# Font rendering
fontlift-core = { workspace = true }
fontlift-platform-mac = { workspace = true, optional = true }
fontlift-platform-win = { workspace = true, optional = true }
log.workspace = true
# Python integration
pyo3.workspace = true
# Font loading
read-fonts.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[features]
default = []
platform-mac = ["fontlift-platform-mac"]
platform-win = ["fontlift-platform-win"]
render-skia = []
render-zeno = []

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
